--- a/src/frontend/public/forms.css
+++ b/src/frontend/public/forms.css
@@ -1,3 +1,17 @@
+select, input, textarea, .inputLike {
+	margin: 5px;
+	border: 1px solid var(--color-primary);
+	outline: none;
+	transition: background-color 300ms, color 300ms, border-color 300ms;
+	background-color: var(--color-inside-surface);
+	
+	&:focus {
+		background-color: var(--color-accent-light);
+		border-color: var(--color-accent-dark);
+		color: var(--color-accent-dark);
+	}
+}
+
 label, .labelLike {
 	display: inline-flex;
 	flex-direction: column;
@@ -10,10 +24,8 @@ label, .labelLike {
 		pointer-events: none;
 		margin-bottom: -10px;
 		padding: 0 4px;
-		color: var(--color-low-key-text);
+		color: var(--color-primary);
 		background-color: var(--color-inside-surface);
-		border-radius: 5px;
-		box-shadow: var(--color-shadow) 0 0 5px 1px;
 	}
 	> small:last-child {
 		margin: -3px 0 10px 5px;
@@ -30,61 +42,48 @@ label, .labelLike {
 		padding: 10px;
 		margin: 5px;
 	}
-	.inputLike {
-		border: 1px solid var(--color-surface-border);
-		border-radius: var(--radius);
-		background-color: var(--color-inside-surface);
-	}
 }
 
 form {
 	padding: 5px;
 	
-	input {
-		padding: 10px;
-		margin: 5px;
-		border: 1px solid var(--color-surface-border);
-		border-radius: var(--radius);
-		transition: background-color 300ms, color 300ms, border-color 300ms;
-		background-color: var(--color-inside-surface);
+	input[type="text"], input[type="number"], input[type="password"], input[type="datetime-local"], input[type="date"], input[type="time"] {
+		width: 150px;
+		padding: 5px;
+	}
+	button, input[type="submit"] {
+		padding: 5px;
+		margin: -1px 1px 1px -1px;
+		cursor: pointer;
+		border-radius: 10px;
+		box-shadow: 1px 1px 1px var(--color-shadow);
 		
-		&:focus {
-			background-color: var(--color-accent);
-			border-color: var(--color-accent-dark);
-			color: var(--color-accent-dark);
+		border: 1px solid white;
+		background-color: var(--color-primary);
+		color: white;
+		
+		&:hover {
+			background-color: var(--color-accent-dark);
 		}
-		&[type=text], &[type=number] {
-			min-width: 150px;
+		&:active {
+			margin: 0;
+			box-shadow: unset;
 		}
-		&[type=submit], &[type=button] {
-			align-self: end;
-			font-weight: bold;
-			cursor: pointer;
-			
-			&:hover {
-				background-color: var(--color-accent);
-				border-color: var(--color-accent-dark);
-				color: var(--color-accent-dark);
-			}
-		}
-		&[type=file] {
-			max-width: 200px;
-			padding-left: 5px;
-			padding-right: 5px;
+		&[disabled] {
+			background-color: lightgray;
+			color: white;
+			cursor: unset;
 		}
 	}
 	
 	select {
-		min-width: 150px;
-		padding: 10px;
-		margin: 5px;
-		border: 1px solid var(--color-surface-border);
-		border-radius: var(--radius);
-		transition: background-color 300ms, color 300ms, border-color 300ms;
-		background-color: var(--color-inside-surface);
-		
-		&:focus {
-			border-color: var(--color-accent-dark);
-		}
+		min-width: 161px;
+		padding: 5px;
+	}
+	
+	textarea {
+		width: 150px;
+		min-height: 100px;
+		padding: 5px;
 	}
 }
