--- a/src/frontend/public/style.css
+++ b/src/frontend/public/style.css
@@ -3,11 +3,10 @@
 	--color-surface: #f8faff;
 	--color-shadow: #0003;
 	--color-inside-surface: white;
-	--color-surface-border: #cecdcd;
-	--color-accent: #ddc575;
-	--color-accent-2: #588591;
-	--color-accent-dark: #bc9c30;
-	--color-low-key-text: gray;
+	--color-primary: #86CD82;
+	--color-accent-light: #BBD1EA;
+	--color-accent: #A1C6EA;
+	--color-accent-dark: #507DBC;
 	--radius: 10px;
 	
 	--paw-prints-z-index: 100;
@@ -38,44 +37,6 @@ a, .clickable {
 	}
 }
 
-
-input[type="text"], input[type="number"], input[type="password"], input[type="datetime-local"], input[type="date"], input[type="time"] {
-	padding: 5px;
-	border: 1px solid var(--color-accent);
-	outline: none;
-	border-radius: 10px;
-	background-color: rgba(255, 255, 255, 0.2);
-	transition: background 300ms ease-in-out;
-	
-	&:focus {
-		background: rgba(255, 255, 255, 0.7);
-	}
-}
-button, input[type="submit"] {
-	padding: 5px;
-	margin: -1px 1px 1px -1px;
-	cursor: pointer;
-	border-radius: 10px;
-	box-shadow: 1px 1px 1px var(--color-shadow);
-	
-	border: 1px solid white;
-	background-color: var(--color-accent);
-	color: white;
-	transition: background-color 300ms ease-in-out;
-	
-	&:hover {
-		background-color: var(--color-accent-dark);
-	}
-	&:active {
-		margin: 0;
-		box-shadow: unset;
-	}
-	&[disabled] {
-		background-color: lightgray;
-		color: white;
-		cursor: unset;
-	}
-}
 
 .smallText {
 	font-size: small;
