--- a/src/frontend/views/widgets/FloatingMenu.module.css
+++ b/src/frontend/views/widgets/FloatingMenu.module.css
@@ -6,7 +6,7 @@
 	margin: auto;
 	padding: 5px;
 	background-color: var(--color-surface);
-	border: 1px solid var(--color-primary);
+	border: 1px solid var(--color-accent);
 	border-radius: var(--radius);
 	text-align: left;
 	box-shadow: 3px 3px 5px var(--color-shadow);
