--- a/src/frontend/public/forms.css
+++ b/src/frontend/public/forms.css
@@ -1,3 +1,7 @@
+:root {
+	--form-element-width: 150px;
+}
+
 select, input, textarea, .inputLike {
 	margin: 5px;
 	border: 1px solid var(--color-primary);
@@ -20,7 +24,6 @@ label, .labelLike {
 	display: inline-flex;
 	flex-direction: column;
 	align-items: start;
-	max-width: 250px;
 	
 	> small:first-child {
 		display: block;
@@ -42,7 +45,7 @@ label, .labelLike {
 	input[type="checkbox"], input[type="radio"] {
 		margin: 20px 0 15px 5px;
 	}
-	.mainContent, .inputLike {
+	.inputLike {
 		padding: 10px;
 		margin: 5px;
 	}
@@ -52,8 +55,11 @@ form {
 	padding: 5px;
 	
 	input[type="text"], input[type="number"], input[type="password"], input[type="datetime-local"], input[type="date"], input[type="time"] {
-		width: 150px;
+		width: var(--form-element-width);
 		padding: 5px;
+	}
+	.inputLike {
+		min-width: var(--form-element-width);
 	}
 	button, input[type="submit"] {
 		padding: 5px;
