--- a/src/frontend/views/widgets/LoadingSpinner.module.css
+++ b/src/frontend/views/widgets/LoadingSpinner.module.css
@@ -8,9 +8,15 @@
 	width: 10px;
 	height: 10px;
 	margin: 2px;
+	aspect-ratio: 1 / 1;
 	
 	border: 5px solid var(--color-primary-dark);
 	border-radius: 50%;
 	animation: spin 2s linear infinite;
 	border-top-color: rgba(0,0,0,0);
+}
+
+label .LoadingSpinner, :global .labelLike :local .LoadingSpinner {
+	height: 6px;
+	width: 6px;
 }
