--- a/src/frontend/public/design.css
+++ b/src/frontend/public/design.css
@@ -45,9 +45,10 @@ a, .clickable {
 	min-width: 150px;
 	max-width: 400px;
 	min-height: 75px;
-	padding: 5px 3px;
+	padding: 5px 10px;
 	background-color: var(--color-primary);
 	border-radius: var(--radius);
+	text-align: center;
 	
 	display: flex;
 	flex-direction: column;
