--- a/src/frontend/views/Navigation.module.css
+++ b/src/frontend/views/Navigation.module.css
@@ -3,9 +3,12 @@
 	box-shadow: inset 0 0 10px var(--color-shadow);
 	border-radius: 20px 20px 0 0;
 	gap: 10px;
+	overflow: hidden;
 	
 	.entry {
 		font-weight: normal;
+		display: flex;
+		align-items: center;
 		
 		&::before {
 			content: ">";
@@ -39,5 +42,9 @@
 		&:hover svg {
 			fill: var(--color-accent-light);
 		}
+	}
+	
+	@media (max-width: 600px) {
+		font-size: 0.7em;
 	}
 }
