--- a/src/frontend/views/widgets/FloatingMenu.module.css
+++ b/src/frontend/views/widgets/FloatingMenu.module.css
@@ -1,7 +1,8 @@
-.DropdownMenu {
+.FloatingMenu {
 	z-index: 1;
 	position: absolute;
 	min-width: 150px;
+	max-width: 400px;
 	min-height: 20px;
 	margin: auto;
 	padding: 5px;
