Rework ViewQuestionnaireData page and change data format from JSON to CSV

--- a/src/frontend/views/pages/ViewQuestionnaireData.module.css
+++ b/src/frontend/views/pages/ViewQuestionnaireData.module.css
@@ -9,3 +9,21 @@
 		}
 	}
 }
+.differences {
+	border: 1px solid var(--color-primary);
+	padding: 5px;
+	white-space: wrap;
+	
+	pre {
+		display: inline;
+	}
+	
+	.added {
+		color: darkgreen;
+		background-color: lightgreen;
+	}
+	.removed {
+		color: darkred;
+		background-color: lightcoral;
+	}
+}
