Add delete endpoints

--- a/src/frontend/public/style.css
+++ b/src/frontend/public/style.css
@@ -12,6 +12,15 @@ body {
 }
 .warn {
 	color: red !important;
+	
+	svg {
+		fill: red !important;
+		transition: fill 300ms;
+		
+		&:hover {
+			fill: darkred !important;
+		}
+	}
 }
 
 .horizontal, .vertical {
