--- a/src/frontend/actions/floatingMenu.module.css
+++ b/src/frontend/actions/floatingMenu.module.css
@@ -7,7 +7,7 @@
 	margin: auto;
 	padding: 5px;
 	background-color: var(--color-surface);
-	border: 1px solid var(--color-accent);
+	border: 1px solid var(--color-primary-light);
 	border-radius: var(--radius);
 	text-align: left;
 	box-shadow: 3px 3px 5px var(--color-shadow);
