Add response data to ConnectAppHelp page

--- a/src/frontend/views/pages/ConnectAppHelp.module.css
+++ b/src/frontend/views/pages/ConnectAppHelp.module.css
@@ -11,12 +11,12 @@
 	}
 	
 	.optional {
-		white-space: wrap;
 		display: inline;
 		color: dimgray;
+		padding: 0;
 	}
 }
 
-.postDataBox {
+.codeBox {
 	/* Used for Unit Tests*/
 }
